--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.google.android.material:material:1.0.0'
 
-    implementation 'com.ogaclejapan.smarttablayout:library:1.7.0@aar'
-    implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.7.0@aar'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
     implementation 'com.google.firebase:firebase-core:17.0.0'
@@ -41,6 +39,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:18.0.0'
 
     implementation 'com.github.GrenderG:Toasty:1.4.2'
+
+    implementation 'com.github.santalu:mask-edittext:1.1.1'
+    implementation 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
