--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gutotech.tcclogistica">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,12 +32,9 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".view.adm.AdmMainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".view.LoginActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"></activity>
+        <activity android:name=".view.LoginActivity"></activity>
     </application>
 
 </manifest>
