--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,9 @@ dependencies {
 
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
-    implementation 'com.google.firebase:firebase-core:17.0.0'
-    implementation 'com.google.firebase:firebase-auth:18.0.0'
-    implementation 'com.google.firebase:firebase-database:18.0.0'
-    implementation 'com.google.firebase:firebase-ml-vision:19.0.3'
-    implementation 'com.google.firebase:firebase-storage:16.1.0'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
 
     implementation 'com.github.GrenderG:Toasty:1.4.2'
@@ -48,6 +46,8 @@ dependencies {
     implementation 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
 
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    implementation 'com.github.clans:fab:1.6.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
