--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
     package="com.gutotech.tcclogistica">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.TrocaSenhaActivity"></activity>
+        <activity
+            android:name=".view.TrocaSenhaActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"></activity>
         <activity
             android:name=".view.SplashActivity"
             android:theme="@style/Splash">
@@ -25,14 +25,18 @@
         </activity>
         <activity
             android:name=".view.motorista.MotoristaMainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_motorista_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".view.roteirista.RoteiristaMainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_roteirista_main"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".view.adm.AdmMainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".view.LoginActivity" />
